# GamePhysicsWeekend

./: CMakeLists.txt  README.md  main.cpp
Math/: Bounds.cpp
Misc/: application.cpp
Renderer/: FrameBuffer.cpp  OffscreenRenderer.cpp  SwapChain.cpp  model.cpp  shader.cpp
week00-boilerplate/: CMakeLists.txt
week00-boilerplate/Physics/: Body.h
week00-boilerplate/Physics/Constraints/: ConstraintBase.h
week01/: CMakeLists.txt  Scene.cpp  Scene.h
week01/Physics/: Body.cpp  Body.h  Broadphase.cpp  Contact.cpp  Intersections.cpp
week01/Physics/Shapes/: ShapeBase.h  ShapeSphere.cpp
week02/: CMakeLists.txt  Scene.cpp
week02/Physics/: GJK.cpp  GJK.h  Intersections.cpp
week02/Physics/Shapes/: ShapeBox.cpp  ShapeConvex.cpp  ShapeSphere.cpp
week03/: CMakeLists.txt  Scene.cpp
week03/Physics/: Body.h  GJK.cpp  GJK.h  Intersections.h  Manifold.cpp
week03/Physics/Constraints/: ConstraintBase.h  ConstraintConstantVelocity.cpp  ConstraintDistance.cpp  ConstraintHinge.cpp  ConstraintMotor.cpp  ConstraintMover.cpp  ConstraintOrientation.cpp  ConstraintPenetration.cpp
week03/Physics/Shapes/: ShapeConvex.cpp
